tests/e2e/semantics/foreach_invalid7.error
Error: syntax error in story at line 8, column 2

8|      d = v
        ^

E0100: Can't assign `any` to `int`
